# alexpose

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DASHBOARD_ORGANIZATION_SUMMARY.md  DUPLICATE_DETECTION_SUMMARY.md  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: comprehensive-testing.yml  performance-testing.yml  quality-gates.yml
.kiro/steering/: product.md  structure.md  tech.md
ambient/: __init__.py  exceptions.py
ambient/analysis/: __init__.py  batch_upload.py  feature_extractor.py  gait_analyzer.py  gait_app.py  gait_main.py  symmetry_analyzer.py  temporal_analyzer.py  upload_manager.py
ambient/classification/: __init__.py  llm_classifier.py  prompt_manager.py
ambient/cli/: __init__.py  main.py
ambient/core/: __init__.py  cli.py  config.py  configuration.py  data_models.py  frame.py  interfaces.py  output.py
ambient/data/: __init__.py  augmentation.py  training_manager.py  versioning.py
ambient/gavd/: README_pose.md  __init__.py  gait_processor.py  gavd_processor.py  keypoints.py  pose_estimators.py
ambient/pose/: __init__.py  alphapose_estimator.py  enhanced_estimators.py  factory.py  ultralytics_estimator.py
ambient/storage/: __init__.py  backup_manager.py  sqlite_storage.py  storage_manager.py
ambient/utils/: __init__.py  csv_parser.py  logging.py  model_utils.py  video_utils.py  youtube_cache.py
ambient/video/: __init__.py  processor.py  youtube_handler.py
config/: README.md  alexpose.yaml  classification_prompts.yaml  development.yaml  heroku-production.yaml  llm_models.yaml  production.yaml
data/: GAVD_Clinical_Annotations_1.1.csv  GAVD_Clinical_Annotations_1.2.csv  GAVD_Clinical_Annotations_1.3.csv
data/gavd/: INSTRUCTIONS.md  process_gavd.py  verify_processing.py
docs/: BBOX_ALIGNMENT_ANALYSIS.md  POSE_ESTIMATION.md  README.md
docs/analysis/: README.md  analysis-flow-diagram.md  csv-parser.md  feature-extraction.md  gait-analysis.md  llm-classification.md  pose-estimation.md  symmetry-analysis.md  temporal-analysis.md  web-interface-tutorial.md
docs/architecture/: core-components.md  documentation-organization.md  memory-management.md
docs/development/: contributing.md
docs/guides/: configuration.md  installation.md  quickstart.md
docs/specs/: design.md  requirements.md  tasks.md  testing-strategy.md
docs/testing/: debugging-guide.md  developer-guidelines.md  property-testing-guide.md  quality-gates-guide.md  quality-gates-quick-reference.md  test-data-management.md
examples/: enhanced_gait_analysis_example.py  log_rotation_example.py  logging_utilities_example.py  memory_management_example.py  structured_logging_example.py
frontend/: GAVD_ROUTE_CONSOLIDATION.md  POSE_ANALYSIS_INTEGRATION.md  README.md  TROUBLESHOOTING.md  VERIFICATION_REPORT.md  components.json  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/applib/: api-client.ts  index.ts  navigation-config.ts  navigation-types.ts  pose-analysis-tooltips.ts  pose-analysis-types.ts  utils.ts
frontend/components/: GAVDVideoPlayer.tsx
frontend/hooks/: useNavigation.ts  usePoseAnalysis.ts
frontend/notes/: GAVD_ROUTE_CONSOLIDATION.md  LIB_TO_APPLIB_MIGRATION.md  POSE_ANALYSIS_INTEGRATION.md  QUICK_REFERENCE.md  RESULT_DETAIL_PAGE.md  VIDEO_PLAYER_QUICK_START.md
notebooks/: explore.ipynb
notebooks/notes/: BBOX_ALIGNMENT_FIX.md  bbox_fix_patch.py  complete_skeleton_implementation.md  emoji_fix.py  enhanced_mediapipe_test.py  fixed_bbox_visualization.py  fixed_mediapipe_cells.py  mediapipe_cells.py  mediapipe_solutions.md  mediapipe_version_debug.py  new_mediapipe_implementation.md  refactored_mediapipe_test.py  step5_implementation.md  test_bbox_fix.py
notes/: 01. Create spec for GAVD analysis.md  02. Write test spec.md  03. Complete tasks.md  04. Fix Pose Overlay.md  05. Pose Analysis Implementation Summary.md  06. Evidence-based Recommendations.md  07. Python to split GAVD files.md  08. Organize GAVD analysis.md
notes/model_naming/: DESCRIPTION_FIELD_FIX.md  NAMING_VISUAL_COMPARISON.md  POSE_MODEL_NAMING_CONSISTENCY_AUDIT.md  POSE_MODEL_NAMING_VERIFICATION.md  YOLO_DISPLAY_NAMES_CORRECTION_SUMMARY.md  YOLO_NAMING_ANALYSIS_AND_CORRECTIONS.md
notes/navigation/: LIQUID_GLASS_NAVIGATION_REDESIGN.md
notes/pose_analysis/: ARCHITECTURE_DIAGRAM.md  COMPLETE_FIX_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  FIX_DIAGRAM.md  INFINITE_LOOP_FIX.md  INFINITE_LOOP_FIX_SUMMARY.md  POSE_ANALYSIS_ARCHITECTURE_DIAGRAM.md  (+17 more)
scripts/: ci-coverage-reporter.sh  ci-quality-gates.sh  ci-test-runner.sh  coverage-reporter.sh  migrate_gavd_metadata.py  setup-dev.bat  setup-dev.sh  start-dev.ps1  start-dev.sh  stop-dev.ps1  stop-dev.sh  test.bat  test.sh  validate_config.py  verify-quality-gates.py  verify_gavd_visualization_fix.py
server/: __init__.py  main.py  pyproject.toml
server/middleware/: __init__.py  auth.py  cors.py  logging.py
server/routers/: __init__.py  analysis.py  gavd.py  health.py  models.py  pose_analysis.py  upload.py  video.py
server/services/: __init__.py  analysis_service.py  gavd_service.py  models_service.py  pose_analysis_service.py  upload_service.py
server/utils/: __init__.py  file_validation.py
tests/: __init__.py  conftest.py  test_breadcrumb_fix.py  test_dashboard_complete_flow.py  test_dashboard_endpoint.py  test_dashboard_integration.py  test_dashboard_statistics.py  test_dashboard_stats_simple.py  test_frontend_delete_integration.md  test_gavd_delete_functionality.py  test_gavd_detail_page.py  test_gavd_frame_seeking.py  test_gavd_integration.py  test_gavd_sequence_viewer.py  test_gavd_visualization.py  test_gavd_visualization_fix.py  test_gavd_visualization_integration.py  test_mediapipe_connections.py  test_model_path_resolution.py  test_models_browse_integration.py  test_models_service.py  test_pose_analysis_service.py  test_pose_analysis_service_caching.py  test_pose_overlay.py  test_pose_overlay_fallback.py  test_unified_dashboard.py  test_video_player_fixes.py  test_video_streaming.py  test_view_sequences_button_removal.py  test_yolo_display_names.py
(+158 files in other folders)
