[project]
name = "alexpose"
version = "0.1.0"
description = "Pose estimation based on health conditions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.56.0",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.31",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "tenacity>=9.1.2",
    "yt-dlp>=2025.12.8",
]
